--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-.menu {
-  display: flex;
-  flex-direction: column;
-}
-
-.menu a:not(:last-child) {
-  margin-right: 4rem;
-}
-
-.menu a {
-  font-size: 1.5em;
-}
-
 header {
   padding: 2rem;
 }
@@ -31,11 +18,12 @@ header .input-search {
   margin-right: 2rem;
 }
 
-@media screen and (min-width: 640px) {
-  .menu {
-    flex-direction: row;
-  }
+.dropdown {
+  text-align: right;
+  margin-right: 2em;
+}
 
+@media screen and (min-width: 640px) {
   .top-header {
     flex-wrap: nowrap;
   }
