--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,12 @@ header .input-search {
   width: 90px;
 }
 
+.paging {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+}
+
 @media screen and (min-width: 640px) {
   .top-header {
     flex-wrap: nowrap;
