--- a/src/App.css
+++ b/src/App.css
@@ -137,16 +137,16 @@ header .input-search {
   padding: 1rem;
 }
 
-.total-summary .total-products {
+.total-summary .total-products div {
   padding: 1rem;
   font-size: 1.5rem;
 }
-.total-summary .shipping-cost {
+.total-summary .shipping-cost div {
   padding: 1rem;
   font-size: 1.5rem;
 }
 
-.total-summary .total {
+.total-summary .total div {
   padding: 1rem;
   font-size: 2rem;
 }
