--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,21 @@ header .input-search {
   max-width: 100px;
 }
 
+/* .product-row .product-image-container {
+  width: 160px;
+  height: 80px;
+  display: inline-flex;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.product-row .product-image-container .product-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+} */
+
 .product-row .product-price {
   margin-left: auto;
   padding-right: 1rem;
